# hris

./: .gitignore  README.md
.github/workflows/: release-horilla-pph21-addon.yml
addons/horilla_pph21_addon/: CHANGELOG.md  README.md  pyproject.toml
addons/horilla_pph21_addon/scripts/: build_wheel.sh
addons/horilla_pph21_addon/src/pph21_plugin/: apps.py  forms.py  indonesia.py  models.py  services.py  signals.py  urlpatch.py  views.py
addons/horilla_pph21_addon/src/pph21_plugin/management/commands/: pph21_install_policy.py
addons/horilla_pph21_addon/src/pph21_plugin/migrations/: 0001_initial.py  0002_alter_employeetaxprofile_options.py
addons/horilla_pph21_addon/src/pph21_plugin/templates/pph21_plugin/: employee_tax_profile_card.html
addons/horilla_pph21_addon/src/pph21_plugin/templatetags/: pph21_tags.py
deploy/horilla/: README.md  horilla_provision.sh
docs/: github-ssh-setup.md  horilla-test-install.md
